# emgapi-v2

./: .aiignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .talismanrc  .yamllint  Dockerfile  README.md  Taskfile.yaml  Taskfile.yml  activate_django_first.py  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements-tools.txt  requirements.txt
.github/workflows/: release_k8s.yml  test.yml
.junie/: guidelines.md
analyses/: admin.py  apps.py  models.py  schemas.py  tests.py
analyses/admin/: __init__.py  analysis.py  assembly.py  assembly_analysis_request.py  base.py  biome.py  compute_resource_heuristic.py  run.py  sample.py  study.py  widgets.py
analyses/base_models/: base_models.py  mgnify_accessioned_models.py  with_downloads_models.py  with_status_models.py  with_watchers_models.py
analyses/migrations/: 0001_initial.py  0002_alter_assemblyanalysisrequest_request_metadata_and_more.py  0002_remove_analysis_accession_remove_sample_accession_and_more.py  0003_alter_study_ena_study.py  0003_analysis_accession_study_accession.py  0004_alter_analysis_study.py  0005_alter_analysis_options.py  0006_run.py  0007_assembly_run_assembly_status_alter_assembly_dir.py  0008_run_sample.py  0009_alter_run_sample.py  0010_alter_study_options_alter_run_experiment_type.py  0011_assembly_study_alter_assembly_ena_accessions_and_more.py  (+37 more)
emgapiv2/: api.py  asgi.py  async_utils.py  config.py  dict_utils.py  enum_utils.py  log_utils.py  model_utils.py  schema_utils.py  settings.py  settings_test.py  test_api.py  test_auth.py  test_data_privacy.py  test_make_dev_data.py  test_utils.py  urls.py  widgets.py  wsgi.py
ena/: admin.py  apps.py  models.py  tests.py
slurm/: Dockerfile  README.md  ctl-entrypoint.sh  dbd-entrypoint.sh  docker-compose.yaml  slurm.conf  slurmdbd.conf  submitter-entrypoint.sh  worker-entrypoint.sh
slurm-dev-environment/: Dockerfile  README.md  docker-compose.yaml
workflows/: README.md  admin.py  ena_fetch_study_flow.py  models.py  signals.py  urls.py  views.py
(+220 files in other folders)
